--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Sk<span>i</span>lls</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
+        <p>Experienced tech professional vast in Angular, TypeScript, JavaScript, NodeJS, and MongoDB with two years of
+          experience in handling popular web languages and technologies in developing and implementing applications
+          based on clients' needs.</p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
@@ -97,8 +97,8 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
+            <h1>Lareina.com.bd</h1>
+            <h2>E-Commrce Web App</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -109,8 +109,8 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
+            <h1>Honda Connect</h1>
+            <h2>ERP Solution</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -121,8 +121,8 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 3</h1>
-            <h2>Coding is Love</h2>
+            <h1>Truck Load</h1>
+            <h2>Service Web App</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -133,8 +133,8 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Coding is Love</h2>
+            <h1>UMS</h1>
+            <h2>User Management System</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -145,8 +145,8 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Coding is Love</h2>
+            <h1>Weather App</h1>
+            <h2>Real Time Weather App</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
