--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/lareina.PNG" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -116,7 +116,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/honda.PNG" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -128,7 +128,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/trackload.PNG" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -152,7 +152,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/weather.PNG" alt="img">
           </div>
         </div>
       </div>
