--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero">
+          <a href="#home">
             <h1><span>S</span>aidur <span>R</span>ahman <span>S</span>haheen</h1>
           </a>
         </div>
@@ -23,8 +23,8 @@
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Skills</a></li>
+            <li><a href="#home" data-after="Home">Home</a></li>
+            <li><a href="#skills" data-after="Service">Skills</a></li>
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -37,8 +37,8 @@
 
 
   <!-- Hero Section  -->
-  <section id="hero">
-    <div class="hero container">
+  <section id="home">
+    <div class="home container">
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
@@ -50,8 +50,8 @@
   <!-- End Hero Section  -->
 
   <!-- Service Section -->
-  <section id="services">
-    <div class="services container">
+  <section id="skills">
+    <div class="skills container">
       <div class="service-top">
         <h1 class="section-title">Sk<span>i</span>lls</h1>
         <p>Experienced tech professional vast in Angular, TypeScript, JavaScript, NodeJS, and MongoDB with two years of
@@ -97,7 +97,7 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Lareina.com.bd</h1>
+            <h1>Lareina</h1>
             <h2>E-Commrce Web App</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
@@ -223,7 +223,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>S</span>aidur <span>R</span>ahman <span>S</span>haheen</h1>
+        <h1 style="text-align: center;"><span>S</span>aidur <span>R</span>ahman <span>S</span>haheen</h1>
       </div>
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
