skill section complete

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <div class="skills container">
       <div class="service-top">
         <h1 class="section-title">Sk<span>i</span>lls</h1>
-        <p>Experienced tech professional vast in Angular, TypeScript, JavaScript, NodeJS, and MongoDB with two years of
+        <p>Experienced tech professional vast in <b>Angular</b>, <b>React</b>, <b>TypeScript</b>, <b>JavaScript</b>,
+          <b>NodeJS</b>,
+          and <b>MongoDB</b></b> with two years of
           experience in handling popular web languages and technologies in developing and implementing applications
           based on clients' needs.</p>
       </div>
@@ -62,26 +64,29 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Front-End</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h3>Angular, React</h3>
+          <p>Experienced web frameworks' vast in Angular & React. Proficient in coding languages such as TypeScript,
+            JavaScript, HTML, CSS, and jQuery.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Back-End</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h3>NodeJS, Express</h3>
+          <p>Experienced with server side web technology like NodeJS, Express.It's used for traditional web sites and back-end API services.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/cloud-sync.png" /></div>
           <h2>Cloud</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h3>Azure DevOps, Firebase</h3>
+          <p>Experienced with Microsoft Azure for building, testing, deploying, and managing applications
+            and services through Microsoft.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/database.png" /></div>
           <h2>Database</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h3>MongoDB</h3>
+          <p>Experienced with MongoDB which is cross-platform document-oriented database program. Classified as a NoSQL
+            database program.</p>
         </div>
       </div>
     </div>
