project details updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Back-End</h2>
           <h3>NodeJS, Express</h3>
-          <p>Experienced with server side web technology like NodeJS, Express.It's used for traditional web sites and back-end API services.</p>
+          <p>Experienced with server side web technology like NodeJS, Express.It's used for traditional web sites and
+            back-end API services.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/cloud-sync.png" /></div>
@@ -104,9 +105,10 @@
           <div class="project-info">
             <h1>Lareina</h1>
             <h2>E-Commrce Web App</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>The primary goal of an e-commerce site is to sell goods online. This project deals with developing an
+              e-commerce website for Online Product Sale. It provides the user with a catalog of different product
+              available for purchase in the store. In order to facilitate online purchase a shopping cart is provided to
+              the user.</p>
           </div>
           <div class="project-img">
             <img src="./img/lareina.PNG" alt="img">
@@ -116,9 +118,9 @@
           <div class="project-info">
             <h1>Honda Connect</h1>
             <h2>ERP Solution</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>Enterprise resource planning (ERP) refers to a type of software that organizations use to manage
+              day-to-day business activities such as accounting, procurement, project management, risk management and
+              compliance, and supply chain operations.</p>
           </div>
           <div class="project-img">
             <img src="./img/honda.PNG" alt="img">
@@ -128,9 +130,9 @@
           <div class="project-info">
             <h1>Truck Load</h1>
             <h2>Service Web App</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>A service-oriented web application. This application is mainly designed for vehicle rental and trip
+              automation. Using this app a consumer can rent a vehicle like a truck, can observe the trip status, and
+              many more. The vehicle provider can take all necessary action and see the dashboard view.</p>
           </div>
           <div class="project-img">
             <img src="./img/trackload.PNG" alt="img">
@@ -140,9 +142,9 @@
           <div class="project-info">
             <h1>UMS</h1>
             <h2>User Management System</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>A module that allows user to define different levels of access to information in the application, by
+              defining specific groups of users, user roles with privileges, handle all the masters that are used in the
+              freight activities.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -152,9 +154,9 @@
           <div class="project-info">
             <h1>Weather App</h1>
             <h2>Real Time Weather App</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>The weather forecast app provides detailed local forecast & weather forecast world wide. The app provides
+              the current temperature, today's high and low temperature in Celsius. Also, provide the chances of rain
+              according to city time zone.</p>
           </div>
           <div class="project-img">
             <img src="./img/weather.PNG" alt="img">
