--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Lareina</h1>
+            <h3>Angular 10, NodeJS, Azure, MongoDB</h3>
             <h2>E-Commrce Web App</h2>
             <p>The primary goal of an e-commerce site is to sell goods online. This project deals with developing an
               e-commerce website for Online Product Sale. It provides the user with a catalog of different product
@@ -117,6 +118,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Honda Connect</h1>
+            <h3>Angular 7, NodeJS, MongoDB</h3>
             <h2>ERP Solution</h2>
             <p>Enterprise resource planning (ERP) refers to a type of software that organizations use to manage
               day-to-day business activities such as accounting, procurement, project management, risk management and
@@ -129,6 +131,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Truck Load</h1>
+            <h3>Angular 9, NodeJS, MongoDB</h3>
             <h2>Service Web App</h2>
             <p>A service-oriented web application. This application is mainly designed for vehicle rental and trip
               automation. Using this app a consumer can rent a vehicle like a truck, can observe the trip status, and
@@ -141,6 +144,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>UMS</h1>
+            <h3>Angular 7, NodeJS, MongoDB</h3>
             <h2>User Management System</h2>
             <p>A module that allows user to define different levels of access to information in the application, by
               defining specific groups of users, user roles with privileges, handle all the masters that are used in the
@@ -153,6 +157,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Weather App</h1>
+            <h3>NodeJS</h3>
             <h2>Real Time Weather App</h2>
             <p>The weather forecast app provides detailed local forecast & weather forecast world wide. The app provides
               the current temperature, today's high and low temperature in Celsius. Also, provide the chances of rain
