--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>Portfolio</title>
+  <link rel="icon" href="./img/resume-and-cv.png" type="image/icon type">
+  portfolio 
 </head>
-
 <body>
   <!-- Header -->
   <section id="header">
