spelling mistake resolved

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Portfolio</title>
   <link rel="icon" href="./img/resume-and-cv.png" type="image/icon type">
 </head>
+
 <body>
   <!-- Header -->
   <section id="header">
@@ -105,11 +106,11 @@
           <div class="project-info">
             <h1>Lareina</h1>
             <h3>Angular 10, NodeJS, Azure, MongoDB</h3>
-            <h2>E-Commrce Web App</h2>
+            <h2>E-Commerce Web App</h2>
             <p>The primary goal of an e-commerce site is to sell goods online. This project deals with developing an
-              e-commerce website for Online Product Sale. It provides the user with a catalog of different product
-              available for purchase in the store. In order to facilitate online purchase a shopping cart is provided to
-              the user.</p>
+              e-commerce website for Online Product Sales. It provides the user with a catalog of different products
+              available for purchase in the store. In order to facilitate online purchases, a shopping cart is provided
+              to the user.</p>
           </div>
           <div class="project-img">
             <img src="./img/lareina.PNG" alt="img">
