--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
         <h2>Front End Developer</h2>
         <p>Experienced tech professional vast in Angular, TypeScript, JavaScript,
           NodeJS, MongoDB. Looking to obtain the role of Software Developer in
-          an organization, to utilize more than one and half year of experience in
+          an organization, to utilize almost two years of experience in
           handling popular web languages and technologies in developing and
           implementing applications based on clients’ needs.
         </p>
-        <a href="https://drive.google.com/file/d/1GetWL3Z0DwIWrjwxLgXydeoSxQU5M9RE/view?usp=sharing"
+        <a href="https://drive.google.com/file/d/1ky-INf8tebIc1Oy51qVGFUIhNdEFoXK-/view?usp=sharing"
           class="cta">Download Resume</a>
       </div>
     </div>
