--- a/index.html
+++ b/index.html
@@ -55,39 +55,41 @@
     <div class="skills container">
       <div class="service-top">
         <h1 class="section-title">Sk<span>i</span>lls</h1>
-        <p>Experienced tech professional vast in <b>Angular</b>, <b>React</b>, <b>TypeScript</b>, <b>JavaScript</b>,
+        <p class="paragraph">Experienced tech professional vast in <b>Angular</b>, <b>React</b>, <b>TypeScript</b>,
+          <b>JavaScript</b>,
           <b>NodeJS</b>,
           and <b>MongoDB</b></b> with two years of
           experience in handling popular web languages and technologies in developing and implementing applications
-          based on clients' needs.</p>
+          based on clients' needs.
+        </p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Front-End</h2>
           <h3>Angular, React</h3>
-          <p>Experienced web frameworks' vast in Angular & React. Proficient in coding languages such as TypeScript,
+          <p class="paragraph">Experienced web frameworks' vast in Angular & React. Proficient in coding languages such as TypeScript,
             JavaScript, HTML, CSS, and jQuery.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Back-End</h2>
           <h3>NodeJS, Express</h3>
-          <p>Experienced with server side web technology like NodeJS, Express.It's used for traditional web sites and
+          <p class="paragraph">Experienced with server side web technology like NodeJS, Express.It's used for traditional web sites and
             back-end API services.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/cloud-sync.png" /></div>
           <h2>Cloud</h2>
           <h3>Azure DevOps, Firebase</h3>
-          <p>Experienced with Microsoft Azure for building, testing, deploying, and managing applications
+          <p class="paragraph">Experienced with Microsoft Azure for building, testing, deploying, and managing applications
             and services through Microsoft.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/database.png" /></div>
           <h2>Database</h2>
           <h3>MongoDB</h3>
-          <p>Experienced with MongoDB which is cross-platform document-oriented database program. Classified as a NoSQL
+          <p class="paragraph">Experienced with MongoDB which is cross-platform document-oriented database program. Classified as a NoSQL
             database program.</p>
         </div>
       </div>
@@ -107,7 +109,7 @@
             <h1>Lareina</h1>
             <h3>Angular 10, NodeJS, Azure, MongoDB</h3>
             <h2>E-Commerce Web App</h2>
-            <p>The primary goal of an e-commerce site is to sell goods online. This project deals with developing an
+            <p class="paragraph">The primary goal of an e-commerce site is to sell goods online. This project deals with developing an
               e-commerce website for Online Product Sales. It provides the user with a catalog of different products
               available for purchase in the store. In order to facilitate online purchases, a shopping cart is provided
               to the user.</p>
@@ -121,7 +123,7 @@
             <h1>Honda Connect</h1>
             <h3>Angular 7, NodeJS, MongoDB</h3>
             <h2>ERP Solution</h2>
-            <p>Enterprise resource planning (ERP) refers to a type of software that organizations use to manage
+            <p class="paragraph">Enterprise resource planning (ERP) refers to a type of software that organizations use to manage
               day-to-day business activities such as accounting, procurement, project management, risk management and
               compliance, and supply chain operations.</p>
           </div>
@@ -134,7 +136,7 @@
             <h1>Truck Load</h1>
             <h3>Angular 9, NodeJS, MongoDB</h3>
             <h2>Service Web App</h2>
-            <p>A service-oriented web application. This application is mainly designed for vehicle rental and trip
+            <p class="paragraph">A service-oriented web application. This application is mainly designed for vehicle rental and trip
               automation. Using this app a consumer can rent a vehicle like a truck, can observe the trip status, and
               many more. The vehicle provider can take all necessary action and see the dashboard view.</p>
           </div>
@@ -147,7 +149,7 @@
             <h1>UMS</h1>
             <h3>Angular 7, NodeJS, MongoDB</h3>
             <h2>User Management System</h2>
-            <p>A module that allows user to define different levels of access to information in the application, by
+            <p class="paragraph">A module that allows user to define different levels of access to information in the application, by
               defining specific groups of users, user roles with privileges, handle all the masters that are used in the
               freight activities.</p>
           </div>
@@ -160,7 +162,7 @@
             <h1>Weather App</h1>
             <h3>NodeJS</h3>
             <h2>Real Time Weather App</h2>
-            <p>The weather forecast app provides detailed local forecast & weather forecast world wide. The app provides
+            <p class="paragraph">The weather forecast app provides detailed local forecast & weather forecast world wide. The app provides
               the current temperature, today's high and low temperature in Celsius. Also, provide the chances of rain
               according to city time zone.</p>
           </div>
@@ -184,7 +186,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>Experienced tech professional vast in Angular, TypeScript, JavaScript,
+        <p class="paragraph">Experienced tech professional vast in Angular, TypeScript, JavaScript,
           NodeJS, MongoDB. Looking to obtain the role of Software Developer in
           an organization, to utilize almost two years of experience in
           handling popular web languages and technologies in developing and
