--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Honda Connect</h1>
-            <h3>Angular 7, NodeJS, MongoDB</h3>
+            <h3>Angular 7, NodeJS, Azure, MongoDB</h3>
             <h2>ERP Solution</h2>
             <p class="paragraph">Enterprise resource planning (ERP) refers to a type of software that organizations use
               to manage
@@ -168,7 +168,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>E-Recruitment</h1>
-            <h3>Angular 10, NodeJS, MySql</h3>
+            <h3>Angular 10, NodeJS, Express, MySql</h3>
             <h2>Recruitment Application</h2>
             <p class="paragraph">A software application that employers use to effectively and efficiently manage their
               recruitment processes. It allows you to create and store a database of candidates, publish vacancies,
@@ -210,7 +210,7 @@
         <h2>Front End Developer</h2>
         <p class="paragraph">Experienced tech professional vast in Angular, TypeScript, JavaScript,
           NodeJS, MongoDB. Looking to obtain the role of Software Developer in
-          an organization, to utilize almost two years of experience in
+          an organization, to utilize <b>02+</b> years of experience in
           handling popular web languages and technologies in developing and
           implementing applications based on clients’ needs.
         </p>
