--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Portfolio</title>
+  <title>Portfolio | Saidur Rahman Shaheen</title>
   <link rel="icon" href="./img/resume-and-cv.png" type="image/icon type">
 </head>
 
@@ -58,7 +58,10 @@
         <p class="paragraph">Experienced tech professional vast in <b>Angular</b>, <b>React</b>, <b>TypeScript</b>,
           <b>JavaScript</b>,
           <b>NodeJS</b>,
-          and <b>MongoDB</b></b> with two years of
+          <b>NestJS</b>,
+          <b>Docker</b>,
+          <b>Azure</b>,
+          and <b>MongoDB</b></b> with almost three years of
           experience in handling popular web languages and technologies in developing and implementing applications
           based on clients' needs.
         </p>
@@ -75,8 +78,8 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/64/000000/source-code.png" /></div>
           <h2>Back-End</h2>
-          <h3>NodeJS, Express</h3>
-          <p class="paragraph">Experienced with server side web technology like NodeJS, Express.It's used for
+          <h3>NodeJS, NestJs, ExpressJS</h3>
+          <p class="paragraph">Experienced with server side web technology like NodeJS, NestJs, Express.It's used for
             traditional web sites and
             back-end API services.</p>
         </div>
@@ -209,12 +212,12 @@
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
         <p class="paragraph">Experienced tech professional vast in Angular, TypeScript, JavaScript,
-          NodeJS, MongoDB. Looking to obtain the role of Software Developer in
-          an organization, to utilize <b>02+</b> years of experience in
+          NodeJS, NestJS, Docker, Azure & MongoDB. Looking to obtain the role of Software Developer in
+          an organization, to utilize almost <b>03</b> years of experience in
           handling popular web languages and technologies in developing and
           implementing applications based on clients’ needs.
         </p>
-        <a href="https://drive.google.com/file/d/1C86uml8bctnRXEkOtHOfjrXhb35xvn8g/view?usp=sharing"
+        <a href="https://drive.google.com/file/d/1AYjJUPxLk6kcBubM8z2bLcMho4qlnXdq/view?usp=sharing"
           class="cta">Download Resume</a>
       </div>
     </div>
@@ -241,7 +244,7 @@
           <div class="contact-info">
             <h1>Email</h1>
             <h2>shaheenfgs@gmail.com</h2>
-            <h2>shaheen_cse@yahoo.com</h2>
+            <h2>shaheen.ewu@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
